--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <h3>Contact</h3>
                 <div class="col-3">
                     <h4>Alamat</h4>
-                    <p>Perumahan Visar Indah Pratama Blok VA4 No. 15 RT. 001/ RW. 012, Kel. Cibinong, Kec. Cibinong, Kab. Bogor</p>
+                    <p>BOGOR</p>
                 </div>
 
                 <div class="col-3">
@@ -165,7 +165,7 @@
 
                 <div class="col-3">
                     <h4>Telp/HP</h4>
-                    <p>0813 1579 3091</p>
+                    <p>+6123129398241293</p>
                 </div>
             </div>
         </section>
